frontend/test/should_fail/index_isin_missing_where_index_expected.grg
rule i(ref s:set<Node>) {
	n:Node;
	
	if{ isInNodesFromIndex(n, s); }
	
	modify {
	}
}
